test fix to overflow title bug in ios

--- a/app/src/styles/post-row.less
+++ b/app/src/styles/post-row.less
@@ -45,6 +45,7 @@
   }
 
   > .display > .info > .postdate {
+    flex-shrink: 0;
     font-size: 0.6em;
     color: @c-muted;
     margin-left: auto;
